--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sqlite3": "^5.1.6",
     "dotenv": "^16.3.1",
     "body-parser": "^1.20.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "axios": "^1.6.0"
   }
 }
