--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "dev": "node server/server.js"
+    "dev": "node server/server.js",
+    "build": "echo 'No build step'"
   },
-  "keywords": ["traffic-law", "consulting", "crm"],
+  "keywords": [
+    "traffic-law",
+    "consulting",
+    "crm"
+  ],
   "author": "AVADA Consultoria",
   "license": "ISC",
   "dependencies": {
